Port samples from gb-poc (Datafye 1.5) to Datafye 2.0
- Restructure into REST (com.datafye.samples.rest) and Java client
  (com.datafye.samples.java) packages
- Update pom.xml to datafye-client 2.0, Java 17
- Port REST samples to unified API (/datafye-api/v1/stocks/...)
- Port Java samples to new client classes and message types
- Add StreamLiveTopOfBook and StreamLiveTrades using FeedClient
- Update rumi.conf for new service names
- Add PROJECT.md